--- a/env/values.yaml
+++ b/env/values.yaml
@@ -11,6 +11,7 @@ controllerworkflow:
   enabled: false
 docker-registry:
   enabled: false
+dockerRegistry: gcr.io
 expose:
   Annotations:
     helm.sh/hook: post-install,post-upgrade
@@ -19,7 +20,7 @@ expose:
   - --v
   - 4
   config:
-    domain: 35.237.214.0.nip.io
+    domain: devopstoolkitseries.com
     exposer: Ingress
     http: "true"
 jenkins:
